# ChatTranslator

./: README.md  pyproject.toml
src/endstone_chat_translator/: __init__.py  plugin.py  translator.py
src/endstone_chat_translator/commands/: __init__.py  translator.py
