[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone_chat_translator"
version = "0.1.0"
description = "A chat translator plugin for Endstone."
authors = [
    { name = "YourName", email = "your-email@example.com" }
]
dependencies = [
    "endstone",
    "requests",
    "toml"
]

[project.entry-points."endstone"]
chat_translator = "endstone_chat_translator.plugin:ChatTranslatorPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_chat_translator"]
